--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,18 @@
     <string name="about3">3. Version Number is :- 2 </string>
     <string name="Toast1">Here is your saved list</string>
     <string name="snackbar1">You can see you previously saved favourite articles!</string>
-    <string name="help">help</string>
+    <string name="help">Help</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="select_date">Select Date</string>
+    <string name="date_hint">YYYY-MM-DD</string>
+    <string name="go">GO</string>
+    <string name="or">OR</string>
+    <string name="gotoS">Go to Saved Images</string>
+    <string name="save">Save Image</string>
+    <string name="main">NASA Image of the Day</string>
+    <string name="saved">Saved Images</string>
+    <string name="url">URL</string>
+    <string name="hd">HD</string>
+    <string name="hide">Hide</string>
 </resources>
